--- a/MovieAPI/MovieAPI/Properties/launchSettings.json
+++ b/MovieAPI/MovieAPI/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:45172",
-      "sslPort": 44337
+      "applicationUrl": "http://localhost:3326",
+      "sslPort": 44303
     }
   },
   "profiles": {
-    "MovieAPI": {
+    "YtMovieApis": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7140;http://localhost:5274",
+      "launchUrl": "weatherforecast",
+      "applicationUrl": "https://localhost:7010;http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
