--- a/MovieAPI/MovieAPI/appsettings.json
+++ b/MovieAPI/MovieAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=MangoCoupon;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=MovieAPI;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
